[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "workbench-agent"
version = "1.0.0"
description = "A command-line tool for interacting with the FossID Workbench via API."
license = { text="MIT License" }
authors = [
  { name="Cristian Pana", email="cristian.pana@fossid.com" },
  { name="Alexandru-Cristian Zănogeanu", email="alexandru.zanogeanu@fossid.com" }
  { name="Tomas Gonzalez", email="tomas@fossid.com" },
]

readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "requests>=2.20.0",
]

[project.scripts]
workbench-agent = "workbench_agent.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=5.0.0",
    "black>=22.0.0",
]

[tool.setuptools.packages.find]
where = ["src"] 

[project.urls]
"Homepage" = "https://github.com/tomgonzo/workbench-agent"
"Bug Tracker" = "https://github.com/tomgonzo/workbench-agent/issues"
