[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "workbench-agent"
version = "0.8.0"
description = "FossID Workbench Agent - Modular API client for automated scanning"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "black",
]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.6.1",
    "requests>=2.25.1",
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | inspiration
)/
'''

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["inspiration"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "inspiration/",
    "build/",
    "dist/"
]

[tool.coverage.run]
source = ["api"]
omit = [
    "*/tests/*",
    "*/inspiration/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow-running tests"
]

 